<resources>
    <string name="app_name">Phoenix</string>

    <string-array name="Assistant_Name">
        <item>Ahmed</item>
        <item>Medhat</item>
        <item>Tefa</item>
        <item>Zalat</item>
        <item>Yaousef</item>
        <item>Mohram</item>
        <item>Ahmed</item>
        <item>Medhat</item>
        <item>Tefa</item>
        <item>Zalat</item>
        <item>Yaousef</item>
        <item>Mohram</item>
    </string-array>
    <string-array name="Teacher_Name">
        <item>Mahmoud</item>
        <item>Abdlah</item>
        <item>Aanter</item>
        <item>Samier</item>
        <item>Oraeen</item>
        <item>Yasser</item>
        <item>Mahmoud</item>
        <item>Abdlah</item>
        <item>Aanter</item>
        <item>Samier</item>
        <item>Oraeen</item>
        <item>Yasser</item>
    </string-array>

    <!-- Login & Sign Up Application String -->

    <!-- No Internet Connection -->
    <string name="no_internet">Please Check Your Internet Connection</string>
    <!-- Text in Welcome Layout-->
    <string name="welcome_layout">Welcome To Phoenix</string>
    <string name="description_welcome_layout">For Easier teaching and more enjoyable study</string>
    <!-- Easy Learning Layout -->
    <string name="easy_learning">Enjoy Learning</string>
    <string name="description_easy_learning_layout">Learn from anywhere with your teachers</string>
    <!-- Easy Teaching Layout -->
    <string name="easy_teaching">Communicate with students</string>
    <string name="description_easy_teaching_layout">Communicate with students from anywhere, at any time</string>

    <!-- Sign Up Fragment Main Text -->
    <string name="sign_up_fragment"><b>Create New Account</b></string>
    <string name="assistant_fragment"><b>Do you have assistant ?</b></string>
    <string name="add_assistant_fragment"><b>Add Assistant</b></string>
    <string name="set_password_fragment"><b>Set Password</b></string>
    <!-- Login Fragment Main Text-->
    <string name="login_fragment"><b>Welcome Back</b></string>

    <!--Error Text -->
    <string name="wrong_password">Wrong Password</string>

    <!-- Hints Text -->
    <string name="sign_up_text">Sign Up</string>
    <string name="login_text"><b>Login</b></string>
    <string name="you_are_text">You are ....</string>
    <string name="Licence">By using our services you are agreeing to our <b>terms</b>  and <b>Privacy</b> </string>
    <string name="Licence_2"><b>Statement</b></string>
    <!-- Lateral Text -->
    <string name="sign_up_lateral_text">Let\'s create an account</string>
    <string name="login_lateral_text">Already have an account</string>
    <string name="enter_your_e_mail_lateral_text">Enter your E-Mail</string>
    <string name="other_sign_up_lateral_text">Sign up in another way </string>
    <string name="select_your_type_lateral_text">Please Select your Type</string>
    <string name="other_login_lateral_text">Login in another way</string>

    <!-- Button -->
    <string name="sign_up_with_e_mail">Sign Up With Email</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="create_account_btn">Create Account</string>
    <string name="add_assistant_btn">Add Assistant</string>
    <string name="check_email_btn">Check</string>
    <string name="send_btn">Send</string>
    <string name="set_new_password">Set Password</string>

    <!-- Edit Text Hint -->
    <string name="name_hint">Name</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="verification_password_hint">Verification Password</string>
    <string name="phone_hint">Phone</string>
    <string name="whats_app_number_hint">What\'s App Number</string>
    <string name="date_hint">Date</string>
    <string name="select_type_hint">Select Type</string>
    <string name="pin_hint">PIN</string>
    <string name="code_hint">Code</string>


    <!-- Under Line TextView -->
    <string name="forget_password"><u>Forget Password?</u>.</string>
    <string name="already_have_account">Already have account ? <b>Login</b></string>
    <string name="do_not_have_account">Don\'t Have Account? <b>Sign Up</b></string>

    <!-- Image Content Description -->
    <string name="img_description">Image View</string>

    <!-- Toast Text -->
    <string name="type_empty">Please Select Type</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="assistant_name"><b>Assistant Name</b></string>
    <string name="teacher_name">Teacher Name</string>
</resources>