<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginLayout.LoginWithEmailFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/email_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        style="@style/text_input_layout"
        android:hint="@string/password_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/wrong_password"
       style="@style/error_text"
        android:text="@string/wrong_password"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/back_to_login"
        style="@style/lateral_text"
        android:text="@string/forget_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/login_btn"
        style="@style/sign_up_submit_btn"
        android:text="@string/login_text"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="125dp"/>


</LinearLayout>