<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpLayout.SignUpDataFragment"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/name_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/phone_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/whats_app_number_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/whats_app_number_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/pin_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pin_edit_Text"
            style="@style/text_input_edit_text"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        style="@style/sign_up_submit_btn"
        android:text="@string/add_assistant_btn"/>
</LinearLayout>