<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginLayout.ForgetPasswordCodeFragment"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/phone_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            style="@style/text_input_edit_text"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_btn"
        style="@style/sign_up_submit_btn"
        android:text="@string/send_btn"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="125dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/code_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text"
            style="@style/text_input_edit_text"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/check_btn"
        style="@style/sign_up_submit_btn"
        android:text="@string/check_email_btn"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="125dp"/>

</LinearLayout>