<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpLayout.SignUpDataFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            style="@style/text_input_edit_text"
            android:layout_height="27dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        style="@style/sign_up_submit_btn"
        android:layout_height="23dp"

        android:text="create" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            style="@style/text_input_edit_text"
            android:layout_height="38dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/text_input_edit_text"
            android:layout_height="22dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/phone_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            style="@style/text_input_edit_text"
            android:layout_height="32dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/whats_app_number_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/whats_app_number_edit_text"
            style="@style/text_input_edit_text"
            android:layout_height="38dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout"
        android:hint="@string/date_hint"
        android:inputType="none"
        app:startIconDrawable="@drawable/calendar"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_picker"
            style="@style/text_input_edit_text"
            android:layout_height="36dp"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_type_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeColor="@color/white"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/select_type_act"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:backgroundTint="@color/transparent"
            android:hint="@string/select_type_hint"
            android:inputType="none"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>