<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".SignUpLayout.BlankFragment"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_assistant_btn"
        style="@style/card_view_btn">
        <ImageView
            style="@style/card_view_image"
            android:layout_height="64dp"
            android:layout_width="64dp"
            android:src="@drawable/add_circle"
            android:contentDescription="@string/img_description"
            />
        <TextView
            style="@style/card_view_text"
            android:text="@string/add_assistant_btn"
            android:textColor="@color/Light_Blue"/>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white_opacity"
        android:elevation="24dp"
        app:cardCornerRadius="30dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assistant_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_margin="20dp" />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/submit_btn"
        style="@style/sign_up_submit_btn"
        android:text="@string/create_account_btn"
        android:layout_marginBottom="20dp"/>
</LinearLayout>